# libpropcalc

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ReadMe.md  assignment.cpp  assignment.hpp  ast.cpp  ast.hpp  clause.hpp  cnf.hpp  cpptest.cpp  ctest.c  formula.cpp  formula.hpp  libpropcalc.pc.in  propcalc.cpp  propcalc.h  propcalc.hpp  truthtable.hpp  tseitin.hpp  variable.cpp  variable.hpp
core/: assignment.cpp  ast.cpp  cnf.cpp  dimacs.cpp  domain.cpp  formula.cpp  tseitin.cpp  variable.cpp
doc/: Parser.md
include/: assignment.hpp  ast.hpp  clause.hpp  cnf.hpp  config.hpp.in  conjunctive.hpp  dimacs.hpp  domain.hpp  formula.hpp  propcalc.h  propcalc.hpp  stream.hpp  truthtable.hpp  tseitin.hpp  variable.hpp  varmap.hpp
t/: domain.t.cpp  formula.t.cpp  parser.t.cpp  stream.t.cpp
